sub-template user_display now includes list of user's secondaries

--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -21,7 +21,7 @@
 
           {% if user.secondaries %}
           <p><b>Secondaries:</b>
-          {{ user.get_secondaries() }}
+          {{ user_secondaries }}
           </p>{% endif %}
 
       </td>
