--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,6 +19,7 @@
     <li> /create_user now doesn't add main character to secondaries if that character is selected in both user_main and user_secondaries </li>
     <li> created sub-template user_display and revised relevant templates to include it </li>
     <li> /character now displays Users who secondary the character </li>
+    <li> sub-template user_display now includes list of user's secondaries </li>
   </ul>
 
   <h4> June 24, 2015 </h4>
