--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,6 +20,7 @@
     <li> created sub-template user_display and revised relevant templates to include it </li>
     <li> /character now displays Users who secondary the character </li>
     <li> sub-template user_display now includes list of user's secondaries </li>
+    <li> implemented conditional checking for User (variable) existence in character.html </li>
   </ul>
 
   <h4> June 24, 2015 </h4>
@@ -44,7 +45,7 @@
     <li> updated all links to properly route to region and character pages </li>
   </ul>
 
-  <div> June 22, 2015 </div>
+  <h4> June 22, 2015 </h4>
   <ul>
     <li> fixed bugs in head to head and revised templates; additionally, all sets now link to the match history page between two users </li>
   </ul>
@@ -94,6 +95,6 @@
   <ul>
 
 <hr>
-<div><b>Current database version: 35</b></div>
+<div><b>Current database version: 37</b></div>
 
 {% endblock %}
