implemented conditional checking for User (variable) existence indeirectly in region.html. Created clear_database.py, which clears the database of all non-Character objects.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,7 +20,8 @@
     <li> created sub-template user_display and revised relevant templates to include it </li>
     <li> /character now displays Users who secondary the character </li>
     <li> sub-template user_display now includes list of user's secondaries </li>
-    <li> implemented conditional checking for User (variable) existence in character.html </li>
+    <li> implemented conditional checking for User (variable) existence indirectly in character.html </li>
+    <li> implemented conditional checking for User (variable) existence indeirectly in region.html. Created clear_database.py, which clears the database of all non-Character objects. </li>
   </ul>
 
   <h4> June 24, 2015 </h4>
