fixed bug on /character in which nonplayable secondary Characters caused the database to crash. Did cleanup work on various templates

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -21,7 +21,8 @@
     <li> /character now displays Users who secondary the character </li>
     <li> sub-template user_display now includes list of user's secondaries </li>
     <li> implemented conditional checking for User (variable) existence indirectly in character.html </li>
-    <li> implemented conditional checking for User (variable) existence indeirectly in region.html. Created clear_database.py, which clears the database of all non-Character objects. </li>
+    <li> implemented conditional checking for User (variable) existence indirectly in region.html. Created clear_database.py, which clears the database of all non-Character objects. </li>
+    <li> fixed bug on /character in which nonplayable secondary Characters caused the database to crash. Did cleanup work on various templates </li>
   </ul>
 
   <h4> June 24, 2015 </h4>
