added tournament column to Set model, and updated templates to display it when representing a set if tournament info is available

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -77,6 +77,7 @@
     <li> added intelligent "validation" system to ensure legal sets are created </li>
     <li> Created 'match.html' and revised 'set.html' template to import 'match.html' when rendering a set. It now prints Match representation in HTML given Match object rather than print a Match object using the Match __str__ method </li>
     <li> updated 'browse_sets.html' template to display set winner and loser as hyperlink routes to User profiles </li>
+    <li> added tournament column to Set model, and updated templates to display it when representing a set if tournament info is available </li>
   </ul>
 
   <h4> June 19, 2015 </h4>
@@ -97,6 +98,6 @@
   <ul>
 
 <hr>
-<div><b>Current database version: 37</b></div>
+<div><b>Current database version: 38</b></div>
 
 {% endblock %}
