revised /set_create and form to take in tournament information

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -25,7 +25,8 @@
     <li> fixed bug on /character in which nonplayable secondary Characters caused the database to crash. Did cleanup work on various templates </li>
     <li> added tournament column to Set model, and updated templates to display it when representing a set if tournament info is available </li>
     <li> added /tournament route that takes parameter tournament, and will query and display all sets for that given tournament </li>
-    <li> added 'tournament.html' which displays all sets from a given tournament. updated other templates to include Set.tournament when relevant and route to it</li>
+    <li> added 'tournament.html' which displays all sets from a given tournament. updated other templates to include Set.tournament when relevant and route to it </li>
+    <li> revised /set_create and form to take in tournament information <li>
   </ul>
 
   <h4> June 24, 2015 </h4>
