--- a/app/templates/set_create.html
+++ b/app/templates/set_create.html
@@ -9,6 +9,9 @@
       Best of: <br>
       {{ form.set_max_match_count }}<br>
       <br>
+      Enter the tournament name, if any: <br>
+      {{ form.set_tournament(size=90) }}<br>
+      <br>
       Please enter the winner's tag:<br>
       {{ form.set_winner_tag(size=90) }}<br>
       <br>
