added addition/removal of secondaries to /edit_user, defined User functions for processing lists of Characters

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -28,6 +28,7 @@
     <li> added 'tournament.html' which displays all sets from a given tournament. updated other templates to include Set.tournament when relevant and route to it </li>
     <li> revised /set_create and form to take in tournament information </li>
     <li> added /edit_user template to edit user, for User.tag, User.main, User.regions </li>
+    <li> added addition/removal of secondaries to /edit_user, defined User functions for processing lists of Characters </li>
   </ul>
 
   <h4> June 24, 2015 </h4>
