--- a/app/templates/user_edit.html
+++ b/app/templates/user_edit.html
@@ -8,20 +8,24 @@
       {{form.hidden_tag()}}
       <table>
           <tr>
-              <td>User tag:</td>
+              <td>Edit User tag:</td>
               <td>{{ form.edit_tag(size=24) }}</td>
           </tr>
           <tr>
-              <td>User region:</td>
+              <td>Edit User region:</td>
               <td>{{ form.edit_region(size=24) }}</td>
           </tr>
           <tr>
-              <td>User main:</td>
+              <td>Edit User main:</td>
               <td>{{ form.edit_main }}</td>
           </tr>
           <tr>
-              <td>User secondaries:</td>
-              <td>{{ form.edit_secondaries }}</td>
+              <td>Add User secondaries:</td>
+              <td>{{ form.add_secondaries }}</td>
+          </tr>
+          <tr>
+              <td>Remove User secondaries:</td>
+              <td>{{ form.remove_secondaries }}</td>
           </tr>
           <tr>
               <td></td>
