in /edit_user, add_secondaries fields only allow selection of non-main and non-secondary characters, and remove_secondaries fields only allow selection of User secondaries characters

--- a/app/templates/user_create.html
+++ b/app/templates/user_create.html
@@ -16,7 +16,7 @@
       {{ form.user_main }}<br>
       <br>
       Enter all the user's secondaries; if none, simply leave all the checkboxes blank:<br>
-      {{ form.user_secondaries }}<br>
+      {{ form.user_secondaries(size=13) }}<br>
 
       {% for error in form.user_tag.errors and form.user_main.errors %}
         <span style="color: red;">[{{ error }}]</span> <!-- flash error message if user_tag is invalid -->
