--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,6 +11,11 @@
 
   <h3>Recent Updates</h3>
 
+  <h4> June 26, 2015 </h6>
+  <ul>
+    <li> in /edit_user, add_secondaries fields only allow selection of non-main and non-secondary characters, and remove_secondaries fields only allow selection of User secondaries characters </li>
+  </ul>
+
   <h4> June 25, 2015 </h5>
   <ul>
     <li> implemented Character-User functions from Character class, and updated unit test (tests.py) </li>
