user.html (user profile) now displays in order: tag, region, main, secondary. (idiomatic of User)

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,6 +14,7 @@
   <h4> June 26, 2015 </h6>
   <ul>
     <li> in /edit_user, add_secondaries fields only allow selection of non-main and non-secondary characters, and remove_secondaries fields only allow selection of User secondaries characters </li>
+    <li> user.html (user profile) now displays in order: tag, region, main, secondary. (idiomatic of User) </li>
   </ul>
 
   <h4> June 25, 2015 </h5>
