--- a/app/templates/user_display.html
+++ b/app/templates/user_display.html
@@ -1,7 +1,9 @@
 <!-- prints User representation in HTML given a User object, with route hyperlink to /user_profile, /region, /character -->
-<b> 
+<div><b> 
 	<a href="{{ url_for("user", tag=user.tag) }}">{{ user.tag }}</a> 
     | <a href="{{ url_for("region", region=user.region) }}">{{user.region}}</a>
     | <a href="{{ url_for("character", character=user.main) }}">{{user.main}}</a>
     | {{ user.get_secondaries() }}
-</b>
+</b></div>
+
+<br>
