revised and optimized User-Character functions add_secondaries_list and remove_secondaries_list. they also screen better for non-Character inputs

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,6 +15,7 @@
   <ul>
     <li> in /edit_user, add_secondaries fields only allow selection of non-main and non-secondary characters, and remove_secondaries fields only allow selection of User secondaries characters </li>
     <li> user.html (user profile) now displays in order: tag, region, main, secondary. (idiomatic of User) </li>
+    <li> revised and optimized User-Character functions add_secondaries_list and remove_secondaries_list. they also screen better for non-Character inputs </li>
   </ul>
 
   <h4> June 25, 2015 </h5>
