match_submit.html now only takes set winner_tag and loser_tag ids as valid choices when declaring match winner and loser, using a dynamic choices SelectField

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,6 +17,7 @@
     <li> user.html (user profile) now displays in order: tag, region, main, secondary. (idiomatic of User) </li>
     <li> revised and optimized User-Character functions add_secondaries_list and remove_secondaries_list. they also screen better for non-Character inputs </li>
     <li> sets without tournament info now automatically display "Non-Tourney" (set.html) </li>
+    <li> match_submit.html now only takes set winner_tag and loser_tag ids as valid choices when declaring match winner and loser, using a dynamic choices SelectField </li>
   </ul>
 
   <h4> June 25, 2015 </h5>
