--- a/app/templates/match_submit.html
+++ b/app/templates/match_submit.html
@@ -6,20 +6,15 @@
   <form action="" method="post" name="match_submit">
     {{ form.hidden_tag() }} <!-- this template argument will get replaced with hidden field that enables CSRF prevention in config. -->
     <p>
-      Please enter the stage the match was played on:<br>
-      {{ form.match_stage }}<br>
+      Please enter the stage the match was played on: {{ form.match_stage }}<br>
       <br>
-      Please enter the match winner:<br>
-      {{ form.match_winner(size=90) }}<br>
+      Please enter the match winner: {{ form.match_winner }}<br>
       <br>
-      Please enter the winner's character:<br>
-      {{ form.winner_char }}<br>
+      Please enter the winner's character: {{ form.winner_char }}<br>
       <br>
-      Please enter the match loser:<br>
-      {{ form.match_loser(size=90) }}<br>
+      Please enter the match loser: {{ form.match_loser }}<br>
       <br>
-      Please enter the loser's character: <br>
-      {{ form.loser_char }}<br>
+      Please enter the loser's character: {{ form.loser_char }}<br>
       
       <!-- flash error message if user_tag is invalid -->
       {% for error in form.match_stage.errors or form.match_winner.errors or form.match_loser.errors  %}
