--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,6 +18,7 @@
     <li> revised and optimized User-Character functions add_secondaries_list and remove_secondaries_list. they also screen better for non-Character inputs </li>
     <li> sets without tournament info now automatically display "Non-Tourney" (set.html) </li>
     <li> match_submit.html now only takes set winner_tag and loser_tag ids as valid choices when declaring match winner and loser, using a dynamic choices SelectField </li>
+    <li> fix bug in which set_create fails if winner and loser id of the respective Users does not exist (if Users don't exist). working to properly display Users who lack attributes </li>
   </ul>
 
   <h4> June 25, 2015 </h5>
