--- a/app/templates/user_display.html
+++ b/app/templates/user_display.html
@@ -17,8 +17,13 @@
     <!-- store value of user.get_secondaries() (a list of Character objects) in user_secondaries -->
     {% set user_secondaries = user.get_secondaries() -%}
 
+    <!-- different ways of representing User based on # of secondaries User has. pay close attention to characters that are printed outside of the variables -->
     {% if user_secondaries|length > 3 %}
-    	 | [ {{ user_secondaries[1] }}, {{ user_secondaries[2] }}, {{ user_secondaries[3]}}... ]
+    	 | [ 
+        <a href="{{ url_for("character", character=user_secondaries[1]) }}">{{user_secondaries[1]}}</a>, 
+        <a href="{{ url_for("character", character=user_secondaries[2]) }}">{{user_secondaries[2]}}</a>,  
+        <a href="{{ url_for("character", character=user_secondaries[3]) }}">{{user_secondaries[3]}}</a>
+        ... ]
     {% elif user_secondaries|length < 1 %}
     <!-- print nothing -->
     {% else %}
@@ -26,9 +31,9 @@
 		{% for i in range(user_secondaries|count) %}
     		<!-- if last secondary, don't print out a comma after -->
     		{% if i == (user_secondaries|count - 1) %}
-				{{user_secondaries[i]}}
+				<a href="{{ url_for("character", character=user_secondaries[i]) }}">{{user_secondaries[i]}}</a>
     		{% else %}
-				{{user_secondaries[i]}}, 
+				<a href="{{ url_for("character", character=user_secondaries[i]) }}">{{user_secondaries[i]}}</a>, 
     		{% endif %}
     	{% endfor %}
 		]
