--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -23,6 +23,7 @@
     <li> fixed routing bug in which Users without regions crashed /browse_region. views.py now checks if user.region exists before adding it to the regionlist </li>
     <li> added character routes to secondaries displayed via user_display.html sub-template. User.html (profile) now routes to the appropriate /user_edit page </li>
     <li> implemented /edit_set route, and associated forms and templates. Works reasonably well, but no support for editing Matches yet </li>
+    <li> optimized /set_create and /set_edit, created helper function and identical Set function to check if Set scores are invalid </li>
   </ul>
 
   <h4> June 25, 2015 </h5>
