--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -24,6 +24,7 @@
     <li> added character routes to secondaries displayed via user_display.html sub-template. User.html (profile) now routes to the appropriate /user_edit page </li>
     <li> implemented /edit_set route, and associated forms and templates. Works reasonably well, but no support for editing Matches yet </li>
     <li> optimized /set_create and /set_edit, created helper function and identical Set function to check if Set scores are invalid </li>
+    <li> in /set_edit, max_match_count is an IntegerField rather than SelectField, and is populated automatically </li>
   </ul>
 
   <h4> June 25, 2015 </h5>
