fixed bugs regarding creating new Users automatically

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -26,6 +26,7 @@
     <li> optimized /set_create and /set_edit, created helper function and identical Set function to check if Set scores are invalid </li>
     <li> in /set_edit, max_match_count is an IntegerField rather than SelectField, and is populated automatically </li>
     <li> in /set_edit, new Users automatically created if User tags change to an unrecognized User. fixed bugs regarding creating new Users automatically </li>
+    <li> fixed bugs regarding creating new Users automatically </li>
   </ul>
 
   <h4> June 25, 2015 </h5>
