/head_to_head now displays overall win record between Users. revised functions in /head_to_head and associated templates

--- a/app/templates/head_to_head.html
+++ b/app/templates/head_to_head.html
@@ -18,8 +18,7 @@
     <p><input type="submit" value="Look up Head to Head"></p><br>
 
     {% if tag1 != None and tag2 != None %} 
-      <h2>Head to Head between {{ tag1 }} and {{ tag2 }}</h2>  
-
+      <h2>Head to Head between {{ tag1 }} ({{ user1_win_count }} - {{ user2_win_count }}) {{ tag2 }}</h2>
       <!-- If variable set is empty, Jinja2 defaults to printing empy string; this is the case when viewing the form without having selected a head to head matchup -->
       {% for set in setlist %}
   	    {% include 'set.html' %}
