--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -27,6 +27,7 @@
     <li> in /set_edit, max_match_count is an IntegerField rather than SelectField, and is populated automatically </li>
     <li> in /set_edit, new Users automatically created if User tags change to an unrecognized User. fixed bugs regarding creating new Users automatically </li>
     <li> fixed bugs regarding creating new Users automatically </li>
+    <li> /head_to_head now displays overall win record between Users. revised functions in /head_to_head and associated templates </li>
   </ul>
 
   <h4> June 25, 2015 </h5>
