reworked Set to display all Matches using an indexed for loop. reformatted Head to Head template to display relevant information at the top before the Set History

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -28,6 +28,7 @@
     <li> in /set_edit, new Users automatically created if User tags change to an unrecognized User. fixed bugs regarding creating new Users automatically </li>
     <li> fixed bugs regarding creating new Users automatically </li>
     <li> /head_to_head now displays overall win record between Users. revised functions in /head_to_head and associated templates </li>
+    <li> reworked Set to display all Matches using an indexed for loop. reformatted Head to Head template to display relevant information at the top before the Set History </li>
   </ul>
 
   <h4> June 25, 2015 </h5>
