--- a/app/templates/head_to_head.html
+++ b/app/templates/head_to_head.html
@@ -19,6 +19,23 @@
 
     {% if tag1 != None and tag2 != None %} 
       <h2>Head to Head between {{ tag1 }} ({{ user1_win_count }} - {{ user2_win_count }}) {{ tag2 }}</h2>
+      
+      <br>
+      <!-- store value of user.get_secondaries() (a list of Character objects) in user_secondaries -->
+
+
+      <table>
+        <tr>
+          <td><b>Total Sets Played: {{ user1_win_count + user2_win_count }}</b></td>
+
+          <td>{{ tag1 }} [{{ user1_win_count }}-{{ user2_win_count }}] vs {{ tag2 }}</td>
+        </tr>
+        <tr>
+          <td>Total Matches Played: </td>
+          <td></td>
+        </tr>
+      <table>
+
       <!-- If variable set is empty, Jinja2 defaults to printing empy string; this is the case when viewing the form without having selected a head to head matchup -->
       {% for set in setlist %}
   	    {% include 'set.html' %}
