--- a/app/templates/head_to_head.html
+++ b/app/templates/head_to_head.html
@@ -21,25 +21,26 @@
       <h2>Head to Head between {{ tag1 }} ({{ user1_win_count }} - {{ user2_win_count }}) {{ tag2 }}</h2>
       
       <br>
-      <!-- store value of user.get_secondaries() (a list of Character objects) in user_secondaries -->
 
 
       <table>
         <tr>
           <td><b>Total Sets Played: {{ user1_win_count + user2_win_count }}</b></td>
-
           <td>{{ tag1 }} [{{ user1_win_count }}-{{ user2_win_count }}] vs {{ tag2 }}</td>
         </tr>
         <tr>
-          <td>Total Matches Played: </td>
-          <td></td>
+          <td><b>Total Matches Played: {{ all_matches }}</b></td>
+          <td>{{ tag1 }} [{{ user1_won_matches }}-{{ user2_won_matches }}] vs {{ tag2 }}</td>
         </tr>
       <table>
 
+      <h2> Set History </h2>
+
       <!-- If variable set is empty, Jinja2 defaults to printing empy string; this is the case when viewing the form without having selected a head to head matchup -->
-      {% for set in setlist %}
+      {% for set in all_sets %}
   	    {% include 'set.html' %}
       {% endfor %}
+      
     {% endif %}
 </form>
 
