--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,6 +11,9 @@
 
   <h3>Recent Updates</h3>
 
+  <h4>June 27, 2015 </h4>
+  <ul>
+    <li> /head_to_head now displays total match count with win# for each User </li>
   <h4> June 26, 2015 </h6>
   <ul>
     <li> in /edit_user, add_secondaries fields only allow selection of non-main and non-secondary characters, and remove_secondaries fields only allow selection of User secondaries characters </li>
