--- a/app/templates/head_to_head.html
+++ b/app/templates/head_to_head.html
@@ -19,10 +19,8 @@
 
     {% if tag1 != None and tag2 != None %} 
       <h2>Head to Head between {{ tag1 }} ({{ user1_win_count }} - {{ user2_win_count }}) {{ tag2 }}</h2>
-      
-      <br>
 
-
+      <h3> Stats </h3>
       <table>
         <tr>
           <td><b>Total Sets Played: {{ user1_win_count + user2_win_count }}</b></td>
