added many functions for finding statistics in /head_to_head, currently in h2h_stats_functions.py

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,6 +15,7 @@
   <ul>
     <li> /head_to_head now displays total match count with win# for each User </li>
     <li> edited issues pointed out in collaborator's code review </li>
+    <li> added many functions for finding statistics in /head_to_head, currently in h2h_stats_functions.py </li>
   </ul>
 
   <h4> June 26, 2015 </h6>
