created and finished testing helper functions for stats in h2h_stats_functions.py

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,6 +11,11 @@
 
   <h3>Recent Updates</h3>
 
+  <h4>June 28, 2015 </h4>
+  <ul>
+    <li> created and finished testing helper functions for stats in h2h_stats_functions.py </li>
+  </ul>
+
   <h4>June 27, 2015 </h4>
   <ul>
     <li> /head_to_head now displays total match count with win# for each User </li>
