front end checkpoint

--- a/app/templates/head_to_head.html
+++ b/app/templates/head_to_head.html
@@ -30,6 +30,18 @@
           <td><b>Total Matches Played: {{ all_matches }}</b></td>
           <td>{{ tag1 }} [{{ user1_won_matches }}-{{ user2_won_matches }}] vs {{ tag2 }}</td>
         </tr>
+        <tr>
+          <td><b>Stage Record: </b></td>
+          <td>Battlefield: </td>
+          <td>Dream Land: </td>
+          <td>Final Destination: </td>
+          <td>Fountain of Dreams: </td>
+          <td>Pokemon Stadium: </td>
+          <td>Yoshi's Story: </td>
+        </tr>
+        <tr>
+          <td><b>Character Record: </b></td>
+        </tr>
       <table>
 
       <h2> Set History </h2>
