parse_challonge.py now filters for sets better and stores information in a sorted list and dictionary

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,6 +11,10 @@
 
   <h3>Recent Updates</h3>
 
+  <h4> June 29, 2015 </h4>
+  <ul>
+  </ul>
+
   <h4>June 28, 2015 </h4>
   <ul>
     <li> created and finished testing helper functions for stats in h2h_stats_functions.py </li>
