/set_create now accepts non-standard integers for DQ ('-1'), Win ('W') and Loss ('L') as Set scores

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,6 +13,7 @@
 
   <h4> June 29, 2015 </h4>
   <ul>
+    <li> /set_create now accepts non-standard integers for DQ ('-1'), Win ('W') and Loss ('L') as Set scores. Set score checking accounts for this. </li>
   </ul>
 
   <h4>June 28, 2015 </h4>
