--- a/app/templates/head_to_head.html
+++ b/app/templates/head_to_head.html
@@ -18,17 +18,17 @@
     <p><input type="submit" value="Look up Head to Head"></p><br>
 
     {% if tag1 != None and tag2 != None %} 
-      <h2>Head to Head between {{ tag1 }} ({{ user1_win_count }} - {{ user2_win_count }}) {{ tag2 }}</h2>
+      <h2>Head to Head between {{ tag1 }} ({{ user1_set_win_count }} - {{ user2_set_win_count }}) {{ tag2 }}</h2>
 
       <h3> Stats </h3>
       <table>
         <tr>
-          <td><b>Total Sets Played: {{ user1_win_count + user2_win_count }}</b></td>
-          <td>{{ tag1 }} [{{ user1_win_count }}-{{ user2_win_count }}] vs {{ tag2 }}</td>
+          <td><b>Total Sets Played: {{ user1_set_win_count + user2_set_win_count }}</b></td>
+          <td>{{ tag1 }} [{{ user1_set_win_count }}-{{ user2_set_win_count }}] vs {{ tag2 }}</td>
         </tr>
         <tr>
-          <td><b>Total Matches Played: {{ all_matches }}</b></td>
-          <td>{{ tag1 }} [{{ user1_won_matches }}-{{ user2_won_matches }}] vs {{ tag2 }}</td>
+          <td><b>Total Matches Played: {{ h2h_matches_played|length }}</b></td>
+          <td>{{ tag1 }} [{{ user1_match_win_count }}-{{ user2_match_win_count }}] vs {{ tag2 }}</td>
         </tr>
         <tr>
           <td><b>Stage Record: </b></td>
@@ -47,7 +47,7 @@
       <h2> Set History </h2>
 
       <!-- If variable set is empty, Jinja2 defaults to printing empy string; this is the case when viewing the form without having selected a head to head matchup -->
-      {% for set in all_sets %}
+      {% for set in h2h_sets_played %}
   	    {% include 'set.html' %}
       {% endfor %}
       
