--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,6 +14,7 @@
   <h4> June 29, 2015 </h4>
   <ul>
     <li> /set_create now accepts non-standard integers for DQ ('-1'), Win ('W') and Loss ('L') as Set scores. Set score checking accounts for this. </li>
+    <li> implemented h2h_stats_functions.py in views to optimize /head_to_head </li>
   </ul>
 
   <h4>June 28, 2015 </h4>
