modified invalidScore in Set model and views.py to let special set score of (1-0) pass

--- a/app/templates/head_to_head.html
+++ b/app/templates/head_to_head.html
@@ -32,12 +32,12 @@
         </tr>
         <tr>
           <td><b>Stage Record: </b></td>
-          <td>Battlefield: </td>
-          <td>Dream Land: </td>
-          <td>Final Destination: </td>
-          <td>Fountain of Dreams: </td>
-          <td>Pokemon Stadium: </td>
-          <td>Yoshi's Story: </td>
+          <td>Battlefield: {{ h2h_stages_played["Battlefield"]|length }}</td>
+          <td>Dream Land: {{ h2h_stages_played["Dreamland"]|length }}</td>
+          <td>Final Destination: {{ h2h_stages_played["Final Destination"]|length }}</td>
+          <td>Fountain of Dreams: {{ h2h_stages_played["Fountain of Dreams"]|length }}</td>
+          <td>Pokemon Stadium: {{ h2h_stages_played["Pokemon Stadium"]|length }}</td>
+          <td>Yoshi's Story: {{ h2h_stages_played["Yoshi's Story"]|length }}</td>
         </tr>
         <tr>
           <td><b>Character Record: </b></td>
