--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,6 +15,7 @@
   <ul>
     <li> /set_create now accepts non-standard integers for DQ ('-1'), Win ('W') and Loss ('L') as Set scores. Set score checking accounts for this. </li>
     <li> implemented h2h_stats_functions.py in views to optimize /head_to_head </li>
+    <li> modified invalidScore in Set model and views.py to let special set score of (1-0) pass </li>
   </ul>
 
   <h4>June 28, 2015 </h4>
