--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,6 +15,7 @@
   <ul>
     <li> modified invalidScore in Set model and views.py to let special set score of (1-0) pass </li>
     <li> implemented new database designed to store data from setlists in the format parse_challonge.py gives. Also copied functions from view and put them in models </li>
+    <li> successfully transferred and displayed data in new database </li>
   </ul>
 
   <h4> June 29, 2015 </h4>
