--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,6 +17,7 @@
     <li> implemented new database designed to store data from setlists in the format parse_challonge.py gives. Also copied functions from view and put them in models </li>
     <li> successfully transferred and displayed data in new database </li>
     <li> parsing is now done not using substrings but tag ids. Compiled all functioning methods into parse_challonge, and successfully tested importing to database </li>
+    <li> updated filtering for valid scores in /set_create </li>
   </ul>
 
   <h4> June 29, 2015 </h4>
