added BooleanField to /set_create which skips match submission if checked

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,6 +18,7 @@
     <li> successfully transferred and displayed data in new database </li>
     <li> parsing is now done not using substrings but tag ids. Compiled all functioning methods into parse_challonge, and successfully tested importing to database </li>
     <li> updated filtering for valid scores in /set_create </li>
+    <li> added BooleanField to /set_create which skips match submission if checked. Currently, it defaults to expecting match information </li>
   </ul>
 
   <h4> June 29, 2015 </h4>
