./make_same_user in models transfers Set data from one User to another and deletes the transferrer, essentially merging Users. /user (profile) now displays overall Set stats

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,6 +11,10 @@
 
   <h3>Recent Updates</h3>
 
+  <h4> July 1, 2015 </h4>
+  <ul>
+    <li> ./make_same_user in models transfers Set data from one User to another and deletes the transferrer, essentially merging Users. /user (profile) now displays overall Set stats </li>
+  </ul>
   <h4> June 30, 2015 </h4>
   <ul>
     <li> modified invalidScore in Set model and views.py to let special set score of (1-0) pass </li>
