--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -40,6 +40,9 @@
   <hr> <!-- theme change -->
   <h2>{{ user.tag }}'s Set History</h2>
   <!-- print all items in array user_sets (currently each item is a fake set) -->
+  <h4>Total Sets: {{ user_sets|length }} | Record: [{{user_wins|length}}-{{user_losses|length}}]</h4>
+  <br>
+  
   {% for set in user_sets %} <!-- user_sets is variable containing the result of user.getAllSets passed from views -->
     {% include 'set.html' %}
   {% endfor %}
