--- a/app/templates/user_display.html
+++ b/app/templates/user_display.html
@@ -1,4 +1,4 @@
-<!-- prints User representation in HTML given a User object, with route hyperlink to /user_profile, /region, /character -->
+<!-- prints User representation in HTML given a User object, with route hyperlink to /user (profile), /region, /character -->
 <div><b> 
 	<a href="{{ url_for("user", tag=user.tag) }}">{{ user.tag }}</a> | 
 	
